Se ha actualizado la interfaz de Edicion de Grupos Se ha añadido la funcionalidad para cargar los datos en el spinner de edicion de grupos